# HELLO-World

./: .gitignore  .gitmodules  CMakeLists.txt  IndexBuffer.cpp  IndexBuffer.h  README.md  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexBuffer.cpp  VertexBuffer.h  all.sh  build.sh  configure.sh  countline.py  main.cpp  run.sh
Core/: Camera.cpp  Camera.h  Event.h  Log.h  Player.cpp  Player.h  Type.cpp  Type.h  Window.cpp  Window.h  World.cpp  World.h
Core/Editor/: Input.cpp  Input.h
Core/Shape/: Bead.cpp  Bead.h  Plane.cpp  Plane.h  Ring.cpp  Ring.h  Shape.cpp  Shape.h
Editor/: Input.cpp  Input.h
Lib/: Math.cpp  Math.h
Rendering/: Camera.cpp  Camera.h  FrameBuffer.cpp  FrameBuffer.h  GraphicsAPI.h  IndexBuffer.cpp  IndexBuffer.h  OpenGLAPI.cpp  OpenGLAPI.h  RenderUtils.h  Renderer.cpp  Renderer.h  RenderingHeaders.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.h  WorldRenderer.cpp  WorldRenderer.h
Shape/: Bead.cpp  Bead.h  Cube.cpp  Cube.h  MeshData.h  Plane.cpp  Plane.h  Ring.cpp  Ring.h  Shape.cpp  Shape.h
core/: Camera.cpp  Camera.h  Event.h  Log.h  Player.cpp  Player.h  Type.h  Window.cpp
core/component/: Component.cpp  Component.h  RenderingComponent.cpp  RenderingComponent.h  TransformComponent.cpp  TransformComponent.h
core/editor/: Input.h
core/object/: Object.cpp  Object.h
core/rendering/: OpenGLAPI.cpp  OpenGLAPI.h  WorldRenderer.cpp  WorldRenderer.h
core/shape/: Cube.cpp  Cube.h  Plane.h  Shape.cpp  Shape.h  ShapeStruct.h
shaders/: basic.shader  skybox.shader  test_light.shader  test_planet.shader  test_ring.shader  test_shadow1.shader  test_shadow2.shader  test_texture.shader
test/: Test.h  TestClearColor.cpp  TestClearColor.h  TestLight.cpp  TestLight.h  TestMenu.cpp  TestMenu.h  TestPlanet.cpp  TestPlanet.h  TestRing.cpp  TestRing.h  TestShadow.cpp  TestShadow.h  TestTexture2D.cpp  TestTexture2D.h
world/: World.cpp  World.h  WorldLauncher.cpp
